# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/app/: build.gradle.kts
android/app/src/main/java/com/example/engine/: MainActivity.java
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
assets/shaders/GL/: text.fs  text.vs  texture.fs  texture.vs  world.fs  world.vs
assets/shaders/GLES/: map.fs  text.fs  text.vs  texture.vs  world.fs  world.vs
lib/Glad/: CMakeLists.txt
lib/Glad/include/glad/: gl.h  glad.h  gles2.h
lib/Glad/src/: CMakeLists.txt  gl.c  glad.c
lib/upng/: CMakeLists.txt
src/: BufferBuilder.hpp  CMakeLists.txt  Core.cpp  Core.hpp  DebugDisplay.cpp  DebugDisplay.hpp  EngineContext.hpp  Game.cpp  Game.hpp  Input.hpp  KeyboardController.cpp  KeyboardController.hpp  ObjectManagerBase.hpp  OpenGL.h  OpenGL.hpp  PipelineState.cpp  PipelineState.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteManager.cpp  SpriteManager.hpp  SpriteManagerBase.hpp  TextManager.cpp  TextManager.hpp  Texture.cpp  Texture.hpp  TextureBufferBuilder.cpp  TextureBufferBuilder.hpp  ThreadPool.cpp  ThreadPool.hpp  TilesetSprite.cpp  TilesetSprite.hpp  TilesetSpriteManager.cpp  TilesetSpriteManager.hpp
src/lua/: Font.cpp  Font.hpp  Keyboard.cpp  Keyboard.hpp  ScriptManager.cpp  ScriptManager.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TilesetSprite.cpp  TilesetSprite.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp
src/platform/android/: Engine.cpp  Engine.hpp  Logger.cpp  Shader.cpp  Texture.cpp  andorid_main.cpp  asset_manager.hpp
src/platform/android/lua/: ScriptManager.cpp
src/platform/android/text/: Font.cpp
src/platform/android/util/: JSON.cpp
src/platform/desktop/: Logger.cpp  Shader.cpp  Texture.cpp  main.cpp
src/platform/desktop/lua/: ScriptManager.cpp
src/platform/desktop/text/: Font.cpp
src/platform/desktop/util/: JSON.cpp
src/renderer/: MapRenderer.cpp  MapRenderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureRenderer.cpp  TextureRenderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
src/sprite/: Sprite.cpp  Sprite.hpp  SpriteBase.cpp  SpriteBase.hpp  SpriteManager.cpp  SpriteManager.hpp  SpriteManagerBase.hpp  TilesetSprite.cpp  TilesetSprite.hpp  TilesetSpriteManager.cpp  TilesetSpriteManager.hpp
src/text/: Font.cpp  Font.hpp  FontAtlas.cpp  FontAtlas.hpp  Text.cpp  Text.hpp
src/util/: JSON.cpp  JSON.hpp  Logger.cpp  Logger.hpp  TextureRect.hpp  UTF-8.cpp  UTF-8.hpp  Vector.hpp
src/world/: Map.cpp  Map.hpp  Tileset.cpp  Tileset.hpp  TilesetManager.cpp  TilesetManager.hpp
tests/: Logger.cpp  ThreadPool.cpp
